[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/UI/Status/barFull2Sided.png" type="Texture" id=1]
[ext_resource path="res://nodes/ItemSelect.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/ItemSelectWAmm.gd" type="Script" id=4]

[node name="ItemSelectWAmm" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 128, 344 )
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ItemSelect" parent="VBoxContainer" instance=ExtResource( 3 )]

[node name="AmmountSlider" type="Control" parent="VBoxContainer"]
margin_top = 312.0
margin_right = 128.0
margin_bottom = 344.0
rect_min_size = Vector2( 0, 32 )

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer/AmmountSlider"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
rounded = true
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
tint_under = Color( 0.12549, 0.12549, 0.12549, 1 )
tint_progress = Color( 0.168627, 1, 0, 1 )
nine_patch_stretch = true

[node name="HSlider" type="HSlider" parent="VBoxContainer/AmmountSlider"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
max_value = 10.0
rounded = true

[connection signal="value_changed" from="VBoxContainer/AmmountSlider/HSlider" to="." method="_on_HSlider_value_changed"]
